--- a/views/report_templates.xml
+++ b/views/report_templates.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <template id="report_purchaseorder_document" inherit_id="web.report_purchaseorder_document">
+    <template id="report_purchaseorder_document" inherit_id="purchase.report_purchaseorder_document">
         <t t-set="layout" position="after">
             <t t-if="company and company.electronic_seal">
                 .o_report_layout_background {
