--- a/views/report_templates.xml
+++ b/views/report_templates.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <template id="report_purchaseorder_document" inherit_id="purchase.report_purchaseorder_document">
-        <t t-set="layout" position="after">
+        <div id="total" position="after">
             <t t-if="company and company.electronic_seal">
                 .o_report_layout_background {
                 background-image: url(/web/image/res.company/<t t-esc="company.id" />/electronic_seal);
                 background-position: center;
                 }
             </t>
-        </t>
+        </div>
     </template>
 </odoo>
